typescript/checker/tests/conformance/es6/modules/exportsAndImports1-es6.ts.stderr
error: ResolvedFailed {
    span: Span {
        lo: BytePos(
            443,
        ),
        hi: BytePos(
            495,
        ),
        ctxt: #0,
    },
    base: "$DIR/tests/conformance/es6/modules",
    src: Atom('./t1' type=inline),
}
  --> $DIR/tests/conformance/es6/modules/exportsAndImports1-es6.ts:33:1
   |
33 | import { v, f, C, I, E, D, M, N, T, a } from "./t1";
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

